--- a/src/app/navs/nav-side/nav-side.component.html
+++ b/src/app/navs/nav-side/nav-side.component.html
@@ -2,7 +2,7 @@
     <h3 class="font-primary">{{app_name}}</h3>
     <small class="text-secondary">Sistema de gestion empresarial</small>
     <div class="menu mt-5">
-        <ul class="nav flex-column font-primary">
+        <ul class="nav flex-column">
             <li class="nav-item">
               <a class="nav-link active" data-toggle="pill" href="#">
                 <h5>
@@ -10,14 +10,14 @@
                 </h5>
               </a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item font-primary">
                 <a class="nav-link" data-toggle="pill">
                     <h5>
                         <i class="pi pi-folder-open"></i> Pagares
                     </h5>
                 </a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item font-primary">
                 <a class="nav-link" data-toggle="pill" href="#">
                 <h5>
                     <i class="pi pi-cog"></i> Ajustes
