--- a/src/app/navs/nav-bar/nav-bar.component.html
+++ b/src/app/navs/nav-bar/nav-bar.component.html
@@ -1,8 +1,10 @@
 <ul class="nav justify-content-end">
     <li class="nav-item">
-      <a class="nav-link" href="#">
-        <p-avatar label="U" shape="circle"></p-avatar>
-        <span class="font-primary px-2"><strong>User name</strong></span>
-      </a>
+      <h5>
+        <a class="nav-link text-dark" href="#">
+          <p-avatar label="U" shape="circle"></p-avatar>
+          <span class="px-2"><strong>User name</strong></span>
+        </a>
+      </h5>
     </li>
   </ul>
