--- a/src/styles.css
+++ b/src/styles.css
@@ -1,14 +1,29 @@
 @import url('https://fonts.googleapis.com/css2?family=Secular+One&display=swap');
 /* You can add global styles to this file, and also import other style files */
+
+/*
+    VERDE PRIMARIO: 007965
+    
+    AMARILLO PRIMARIO: FFC947
+*/
 html, body{
     height: 100%;
     margin: 0;
-}
-
-.content{
     background-color: #E4EFE7;
+    font-size: 10pt;
 }
 
+
+/*FONT STYLES*/
 .font-primary{
     font-family: 'Secular One', sans-serif;
+    font-size: 25pt;
 }
+
+/*BACKGROUND STYLES*/
+.indev-bg-success {
+    background-color: #007965 !important; 
+    color: #ffffff !important;
+}
+
+
