--- a/src/app/master/master.component.html
+++ b/src/app/master/master.component.html
@@ -1,12 +1,12 @@
 <div class="content h-100 d-sm-flex d-block">
-    <div class="nav-side h-100 bg-light shadow-md px-2 py-4">
+    <div class="nav-side h-100 bg-light shadow px-2 py-4">
         <app-nav-side></app-nav-side>
     </div>
     <div class="app-body d-inline">
         <div class="nav-bar d-sm-block d-none">
             <app-nav-bar></app-nav-bar>
         </div>
-        <div class="app-content mt-3">
+        <div class="app-content mt-2">
             <div class="container">
                 <router-outlet></router-outlet>
             </div>
