--- a/src/app/navs/nav-side/nav-side.component.html
+++ b/src/app/navs/nav-side/nav-side.component.html
@@ -1,6 +1,5 @@
 <div class="container">
     <h3 class="font-primary">{{app_name}}</h3>
-    <small class="text-secondary">Sistema de gestion empresarial</small>
     <div class="menu mt-5">
         <ul class="nav flex-column">
             <li class="nav-item">
@@ -21,6 +20,13 @@
                 <a class="nav-link" data-toggle="pill" href="#">
                 <h5>
                     <i class="pi pi-cog"></i> Ajustes
+                </h5>
+                </a>
+            </li>
+            <li class="nav-item font-primary mt-5">
+                <a class="nav-link" data-toggle="pill" href="#" (click)="OnLogout()">
+                <h5>
+                    <i class="pi pi-sign-out"></i> Cerrar sesion
                 </h5>
                 </a>
             </li>
