Se suben cambios referente al componente de los detalles de una asociado. Inicios

--- a/src/app/components/associate/list-associate/list-associate.component.html
+++ b/src/app/components/associate/list-associate/list-associate.component.html
@@ -46,7 +46,7 @@
                     <td>{{associate.surname_1}} {{associate.surname_2}}</td>
                     <td>{{associate.update_data}}</td>
                     <td>
-                        <button type="button" class="p-button-rounded btn-view border-0" pButton icon="pi pi-eye"></button>
+                        <button type="button" class="p-button-rounded btn-view border-0" pButton icon="pi pi-eye" [routerLink]="['associate/details', associate.number_identity]"></button>
                     </td>
                 </tr>
             </ng-template>
