--- a/src/app/navs/nav-side/nav-side.component.html
+++ b/src/app/navs/nav-side/nav-side.component.html
@@ -3,7 +3,7 @@
     <div class="menu mt-5">
         <ul class="nav flex-column">
             <li class="nav-item">
-              <a class="nav-link active" data-toggle="pill" href="#">
+              <a class="nav-link active" data-toggle="pill" [routerLink]="['/master']">
                 <h5>
                     <i class="pi pi-users"></i> Asociados
                 </h5>
