Se suben cambios con avance al proceso de poder actualizar los datos personales de un asociado

--- a/src/app/components/associate/details-associate/details-associate.component.html
+++ b/src/app/components/associate/details-associate/details-associate.component.html
@@ -65,9 +65,9 @@
             <h5>Informacion del asociado</h5>
         </div>
     </div>
-    <div class="row">
+    <div class="row py-3">
         <div class="col">
-            <p-tabView>
+            <p-tabView [styleClass]="'shadow'">
                 <p-tabPanel header="Datos personlaes" [headerStyleClass]="'text-dark'">
                    <app-personal-informations></app-personal-informations>
                 </p-tabPanel>
