--- a/src/app/components/associate/informations/personal-informations/personal-informations.component.html
+++ b/src/app/components/associate/informations/personal-informations/personal-informations.component.html
@@ -1,1 +1,149 @@
-<p>personal-informations works!</p>
+<p-toast></p-toast>
+<div class="container-fluid" *ngIf = "associate && personal_informations">
+    <form #frmPersonalInformations = "ngForm" (ngSubmit)="onSubmit()">
+        <div class="form-row">
+            <div class="col-3 indev-input">
+                <h5>PRIMER APELLIDO</h5>
+                <input type="text" name="inputSurname1" #surname_1 = "ngModel" [(ngModel)] = "associate.surname_1" pInputText class="p-inputtext-md" required>     
+                <small *ngIf = "surname_1.invalid || (surname_1.touched && surname_1.invalid)" class="text-danger"><strong>El campo no es valido.</strong></small>
+            </div>
+            <div class="col-3 indev-input">
+                <h5>SEGUNDO APELLIDO</h5>
+                <input type="text" name="inputSurname2" #surname_2 = "ngModel" [(ngModel)] = "associate.surname_2" pInputText class="p-inputtext-md">     
+                <small *ngIf = "surname_2.invalid || (surname_2.touched && surname_2.invalid)" class="text-danger"><strong>El campo no es valido.</strong></small>
+            </div>
+            <div class="col-6 indev-input">
+                <h5>NOMBRE COMPLETO</h5>
+                <input type="text" name="inputNames" #names = "ngModel" [(ngModel)] = "associate.names" pInputText class="p-inputtext-md" required>     
+                <small *ngIf = "names.invalid || (names.touched && names.invalid)" class="text-danger"><strong>El campo no es valido.</strong></small>
+            </div>
+        </div>
+        <div class="form-row mt-3">
+            <div class="col-3 indev-input">
+                <h5>T. IDENTIFICACIÓN</h5>
+                <p-dropdown [options]="list_types_identities" [styleClass]="'indev-p-dropdown'" name="inputTypeIdentity" #type_identity = "ngModel" [(ngModel)] = "associate.type_identity" optionLabel="name" optionValue="code" 
+                    placeholder="SELECCIONAR..." [disabled]="!list_types_identities" [required]="true"></p-dropdown>
+                    <small *ngIf = "type_identity.invalid || (type_identity.touched && type_identity.invalid)" class="text-danger"><strong>El campo no es valido.</strong></small>
+            </div>
+            <div class="col-3 indev-input">
+                <h5>No. IDENTIFICACIÓN</h5>
+                <input type="text" name="inputNumberIdentity" #number_identity = "ngModel" [(ngModel)] ="associate.number_identity" pInputText class="p-inputtext-md" required>
+                <small *ngIf = "number_identity.invalid || (number_identity.touched && number_identity.invalid)" class="text-danger"><strong>El campo no es valido.</strong></small>     
+            </div>
+            <div class="col-3 indev-input">
+                <h5>DPTO. DE EXPEDICIÓN</h5>
+                <p-dropdown [options]="list_departments" [styleClass]="'indev-p-dropdown'" name="inputD_Expedition_Department" #d_expedition_department = "ngModel" [(ngModel)] = "personal_informations.d_expedition_department" optionLabel="name" optionValue="code" 
+                    (onChange)="GetLocations(personal_informations.d_expedition_department, 'locations_expedition')" placeholder="SELECCIONAR..." [disabled]="!list_departments" [required]="true"></p-dropdown>     
+                    <small *ngIf = "d_expedition_department.invalid || (d_expedition_department.touched && d_expedition_department.invalid)" class="text-danger"><strong>El campo no es valido.</strong></small>
+            </div>
+            <div class="col-3 indev-input">
+                <h5>CIUDAD DE EXPEDICIÓN</h5>
+                <p-dropdown [styleClass]="'indev-p-dropdown'"  [options]="list_locations_expedition" name="inputD_CityExpedition" #d_expedition_city = "ngModel" [(ngModel)] = "personal_informations.d_expedition_city"  optionValue="code" optionLabel="name" [filter]="true" filterBy="name" placeholder="SELECCIONAR..." [disabled]="!list_locations_expedition" [required]="true">
+                    <ng-template let-location pTemplate="item">
+                        <div>
+                            <p>{{location.name}}</p>
+                        </div>
+                    </ng-template>
+                </p-dropdown>    
+            </div>
+        </div>
+        <div class="form-row mt-3">
+            <div class="col-3 indev-input">
+                <h5>FECHA DE EXPEDICIÓN</h5>
+                <input type="date" pInputText class="indev-calendar" name="inputD_Expedition_Date" #d_expedition_date = "ngModel" [(ngModel)] ="personal_informations.d_expedition_date" [required]="true">   
+                <small *ngIf = "d_expedition_date.invalid || (d_expedition_date.touched && d_expedition_date.invalid)" class="text-danger" required><strong>El campo no es valido.</strong></small>
+            </div>
+            <div class="col-3 indev-input">
+                <h5>FECHA DE NACIMIENTO</h5>
+                <input type="date" pInputText class="indev-calendar" name="inputBirthDate" #birth_date = "ngModel" [(ngModel)] = "personal_informations.birth_date" [required]="true">   
+                <small *ngIf = "birth_date.invalid || (birth_date.touched && birth_date.invalid)" class="text-danger" required><strong>El campo no es valido.</strong></small>
+            </div>
+            <div class="col-3 indev-input">
+                <h5>PAIS DE NACIMIENTO</h5>
+                <input type="text" pInputText class="p-inputtext-md" value="COLOMBIA" name="inputBirthContry" #country_birth = "ngModel" [(ngModel)] = "personal_informations.country_birth" [disabled]="true" [required]="true">     
+            </div>
+            <div class="col-3 indev-input">
+                <h5>DPTO. DE NACIMIENTO</h5>
+                <p-dropdown [styleClass]="'indev-p-dropdown'"  [options]="list_departments" name="inputD_Expedition_Department" #department_birth = "ngModel" [(ngModel)] = "personal_informations.department_birth" optionValue="code" optionLabel="name" [filter]="true" filterBy="name" 
+                    (onChange)="GetLocations(personal_informations.department_birth,'locations_birth')" placeholder="SELECCIONAR..." [disabled]="!list_departments" [required]="true">
+                    <ng-template let-department pTemplate="item">
+                        <div style="width: 25px;">
+                            <p>{{department.name}}</p>
+                        </div>
+                    </ng-template>
+                </p-dropdown>
+                <small *ngIf = "department_birth.invalid || (department_birth.touched && department_birth.invalid)" class="text-danger"><strong>El campo no es valido.</strong></small>
+            </div>
+        </div>
+        <div class="form-row mt-3">
+            <div class="col-3 indev-input">
+                <h5>CIUDAD DE NACIMIENTO</h5>
+                <p-dropdown [styleClass]="'indev-p-dropdown'"  [options]="list_locations_birth" name="inputCityBirth" #city_birth = "ngModel" [(ngModel)] = "personal_informations.city_birth"  optionValue="code" optionLabel="name" [filter]="true" filterBy="name" placeholder="SELECCIONAR..." 
+                     [disabled]="!list_locations_birth" [required]="true">
+                    <ng-template let-location pTemplate="item">
+                        <div>
+                            <p>{{location.name}}</p>
+                        </div>
+                    </ng-template>
+                </p-dropdown>
+            </div>
+            <div class="col-3 indev-input">
+                <h5>ESTADO CIVIL</h5>
+                <p-dropdown [options]="list_civil_status" [styleClass]="'indev-p-dropdown'" name="inputCivilStatu" #civil_status = "ngModel" [(ngModel)] = "personal_informations.civil_statu" 
+                    optionLabel="concept" optionValue="code" [disabled]="!list_civil_status" [required]="true"></p-dropdown> 
+                <small *ngIf = "civil_status.invalid || (civil_status.touched && civil_status.invalid)" class="text-danger"><strong>El campo no es valido.</strong></small>
+            </div>
+            <div class="col-3 indev-input">
+                <h5>SEXO</h5>
+                <p-dropdown [options]="[{code:'F', concept:'FEMENINO'},{code:'M', concept:'MASCULINO'}]" [styleClass]="'indev-p-dropdown'" name="inputGender" #gender = "ngModel" [(ngModel)]="personal_informations.gender" 
+                    optionLabel="concept" optionValue="code" [required]="true"></p-dropdown>     
+                <small *ngIf = "gender.invalid || (gender.touched && gender.invalid)" class="text-danger"><strong>El campo no es valido.</strong></small>
+            </div>
+            <div class="col-3 indev-input">
+                <h5>CABEZA DE FAMILIA</h5>
+                <p-dropdown [options]="[{code:'N', concept:'NO'}, {code: 'S', concept: 'SI'}]" [styleClass]="'indev-p-dropdown'"
+                    name="inputHeadFamily" #head_family = "ngModel" [(ngModel)]="personal_informations.head_family" optionLabel="concept" optionValue="code" placeholder="SELECCIONAR..." [required]="true"></p-dropdown>
+                    <small *ngIf = "head_family.invalid || (head_family.touched && head_family.invalid)" class="text-danger"><strong>El campo no es valido.</strong></small>   
+            </div>
+        </div>
+        <div class="form-row mt-3">
+            <div class="col-3 indev-input">
+                <h5>PERSONAS A CARGO</h5>
+                <input type="text" pInputText class="p-inputtext-md" name="inputDependents" #dependents="ngModel" [(ngModel)]="personal_informations.dependents" value="0" min="0" pattern="[0-9+]" required>
+                <small *ngIf = "dependents.invalid || (dependents.touched && dependents.invalid)" class="text-danger"><strong>El campo no es valido.</strong></small>
+            </div>
+            <div class="col-3 indev-input">
+                <h5>GRUPO ETHNICO</h5>
+                <p-dropdown [options]="list_ethnic_groups" [styleClass]="'indev-p-dropdown'" name="inputEthnicGroup" #ethnic_group = "ngModel" [(ngModel)]="personal_informations.ethnic_group" 
+                    optionLabel="concept" optionValue="code" [disabled]="!list_ethnic_groups"  [required]="true"></p-dropdown> 
+            </div>
+            <div class="col-3 indev-input">
+                <h5>ESTRATO SOCIOECONOMICO</h5>
+                <p-dropdown [options]="list_strata" [styleClass]="'indev-p-dropdown'" name="inputSocioeconomic" #socioeconomic = "ngModel" [(ngModel)]="personal_informations.socioeconomic"
+                    optionLabel="concept" optionValue="code" placeholder="SELECCIONAR..." [disabled]="!list_strata" [required]="true"></p-dropdown>
+                <small *ngIf = "socioeconomic.invalid || (socioeconomic.touched && socioeconomic.invalid)" class="text-danger"><strong>El campo no es valido.</strong></small>     
+            </div>
+            <div class="col-3 indev-input">
+                <h5>NIVEL EDUCATIVO</h5>
+                <p-dropdown [options]="list_education_levels" [styleClass]="'indev-p-dropdown'" name="inputEducationLevel" #education_level = "ngModel" [(ngModel)]="personal_informations.education_level"
+                    optionLabel="concept" optionValue="code" placeholder="SELECCIONAR..." [disabled]="!list_education_levels" [required]="true"></p-dropdown>
+                <small *ngIf = "education_level.invalid || (education_level.touched && education_level.invalid)" class="text-danger"><strong>El campo no es valido.</strong></small>
+            </div>
+        </div>
+        <div class="form-row mt-3 justify-content-between">
+            <div class="col-3 indev-input">
+                <h5>PROFESIÓN</h5>
+                <p-dropdown [styleClass]="'indev-p-dropdown'"  [options]="list_types_profession" name="inputProfession" #profession = "ngModel" [(ngModel)]="personal_informations.profession"  optionValue="code" optionLabel="concept" [filter]="true" filterBy="concept" placeholder="SELECCIONAR..." [required]="true">
+                    <ng-template let-profession pTemplate="item">
+                        <div>
+                            <p>{{profession.concept}}</p>
+                        </div>
+                    </ng-template>
+                </p-dropdown>
+            </div>
+            <div class="col-auto align-self-end">
+                <p-button type="submit" label="Guardar cambios" [styleClass]="'bg-success border-0'" [disabled]="frmPersonalInformations.invalid === true"></p-button>
+            </div>
+        </div>
+    </form>
+</div>
