--- a/src/app/components/associate/informations/personal-informations/personal-informations.component.html
+++ b/src/app/components/associate/informations/personal-informations/personal-informations.component.html
@@ -1,5 +1,5 @@
 <p-toast></p-toast>
-<div class="container-fluid" *ngIf = "associate && personal_informations">
+<div class="container-fluid" *ngIf="associate_id">
     <form #frmPersonalInformations = "ngForm" (ngSubmit)="onSubmit()">
         <div class="form-row">
             <div class="col-3 indev-input">
