--- a/src/app/components/associate/informations/conyuge-informations/conyuge-informations.component.html
+++ b/src/app/components/associate/informations/conyuge-informations/conyuge-informations.component.html
@@ -1,5 +1,5 @@
 <p-toast></p-toast>
-<div class="container-fluid">
+<div class="container-fluid" *ngIf="conyuge_information">
     <form #frmConyugeInformations="ngForm" (ngSubmit)="OnSubmit()">
         <div class="form-row mb-3">
             <div class="col-6 indev-input">
@@ -21,14 +21,14 @@
         </div>
         <div class="form-row mb-3">
             <div class="col-3 indev-input">
-                <h5>FECHA DE EXPIDICIÓN</h5>
-                <input type="date" pInputText name="inputD_ExpeditionDate" #d_expedition_date="ngModel" [(ngModel)]="conyuge_information.d_expedition_date" required>
+                <h5>FECHA DE EXPEDICION</h5>
+                <input type="date" pInputText  name="inputD_ExpeditionDate" #d_expedition_date="ngModel" [(ngModel)]="conyuge_information.d_expedition_date" required>
                 <small *ngIf="d_expedition_date.invalid || (d_expedition_date.invalid && d_expedition_date.touched)" class="text-danger"><strong>El campo no es valido.</strong></small>
             </div>
             <div class="col-3 indev-input">
                 <h5>DPTO. EXPEDICIÓN</h5>
-                <p-dropdown [options]="list_departments" [styleClass]="'indev-p-dropdown'" name="inputD_ExpeditionDepartment>" #d_expedition_department="ngModel" [(ngModel)]="conyuge_information.d_expedition_date"
-                    optionLabel="name" optionValue="code" [disabled]="!list_departments" [required]="true"></p-dropdown>
+                <p-dropdown [options]="list_departments" [styleClass]="'indev-p-dropdown'" name="inputD_ExpeditionDepartment" #d_expedition_department="ngModel" [(ngModel)]="conyuge_information.d_expedition_department"
+                    (onChange)="GetLocations(conyuge_information.d_expedition_department, 'expedition_locations')" optionLabel="name" optionValue="code" [disabled]="!list_departments" [required]="true"></p-dropdown>
                 <small *ngIf="d_expedition_department.invalid || (d_expedition_department.invalid && d_expedition_department.touched)" class="text-danger"><strong>El campo no es valido.</strong></small>
             </div>
             <div class="col-3 indev-input">
@@ -58,7 +58,7 @@
             <div class="col-3 indev-input">
                 <h5>DEPARTAMENTO</h5>
                 <p-dropdown [options]="list_departments" [styleClass]="'indev-p-dropdown'" name="inputDepartment>" #department="ngModel" [(ngModel)]="conyuge_information.department"
-                    optionLabel="name" optionValue="code" [disabled]="!list_departments" [required]="true"></p-dropdown>
+                    (onChange)="GetLocations(conyuge_information.department, 'locations')" optionLabel="name" optionValue="code" [disabled]="!list_departments" [required]="true"></p-dropdown>
                 <small *ngIf="department.invalid || (department.invalid && department.touched)" class="text-danger"><strong>El campo no es valido.</strong></small>
             </div>
             <div class="col-3 indev-input">
