Se integran cambios referente al proceso de gestionar la informacion de los beneficiarios y se ajusta el menu de datos

--- a/src/app/components/associate/details-associate/details-associate.component.html
+++ b/src/app/components/associate/details-associate/details-associate.component.html
@@ -56,7 +56,7 @@
                     Content 3
                 </p-tabPanel>
             </p-tabView> -->
-            <p-tabMenu [model]="menu_items"></p-tabMenu>
+            <p-tabMenu [model]="menu_items" [scrollable]="true"></p-tabMenu>
             <div class="content-menu">
                 <div class="card">
                     <div class="card-body">
