--- a/src/app/components/associate/informations/financial-informations/financial-informations.component.html
+++ b/src/app/components/associate/informations/financial-informations/financial-informations.component.html
@@ -5,4 +5,12 @@
             <app-incomes-informations></app-incomes-informations>
         </div>
     </div>
+    <hr>
+    <div class="row">
+        <div class="col-12">
+            <h5><strong>EGRESOS MENSUALES</strong></h5>
+            <app-expenses-informations></app-expenses-informations>
+        </div>
+    </div>
+
 </div>
