se integran cambios para el proceso de gestionar los activos de un asociado

--- a/src/app/components/associate/informations/financial-informations/financial-informations.component.html
+++ b/src/app/components/associate/informations/financial-informations/financial-informations.component.html
@@ -12,5 +12,10 @@
             <app-expenses-informations></app-expenses-informations>
         </div>
     </div>
-
+    <hr>
+    <div class="row">
+        <div class="col-12">
+            <app-assets-information></app-assets-information>
+        </div>
+    </div>
 </div>
